k8s/bases/infrastructure/controllers/dex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dex
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
